upload and list from the web to telgeram channel

--- a/.env.example
+++ b/.env.example
@@ -57,3 +57,9 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+# Telegram Bot (Local Bot API Server)
+TELEGRAM_BOT_API_URL=https://api.telegram.org
+TELEGRAM_BOT_TOKEN=
+TELEGRAM_BOT_API_IS_LOCAL=false
+TELEGRAM_STORAGE_CHANNEL_ID=
